--- a/CLOVER/config.plist
+++ b/CLOVER/config.plist
@@ -449,6 +449,10 @@
 			<key>NVidia</key>
 			<false/>
 		</dict>
+		<key>NvidiaSingle</key>
+		<false/>
+		<key>ig-platform-id</key>
+		<string>0x3EA50009</string>
 	</dict>
 	<key>KernelAndKextPatches</key>
 	<dict>
